Revision history for XML-Grammar-Screenplay

0.0600  Fri Oct  9 11:35:30 IST 2009
        - Converted the generated Screenplay-XML to its own namespace:
        http://web-cpan.berlios.de/modules/XML-Grammar-Screenplay/screenplay-xml-0.2/
        - Adapted the stylesheets, the RelaxNG schema, etc. to that while
        adapting the test scripts. 

0.0503  Wed Jul 29 10:12:38 IDT 2009
        - Included a "package XML::Grammar::Screenplay::FromProto::Nodes"
        statement at the top of:
        lib/XML/Grammar/Screenplay/FromProto/Nodes.pm
        Because otherwise the rpm builder was confused.

0.0502  Wed Mar  4 22:19:43 IST 2009
        - Upgraded inc/XML/Grammar/Builder.pm to 0.0101 to (hopefully)
        handle the extradata properly under all conditions.

0.0501  Tue Mar  3 19:38:22 IST 2009
        - Changed the Build.PL to use XML::Grammar::Builder.
            - changed the tests accordingly, due to the lack of 
            "blib/extradata".

0.0500  Fri Feb 27 17:48:52 IST 2009
        - Converted to use a RelaxNG schema.
            - Now using it in ::ToHTML instead of the DTD.
        - Added a sanity check for no inner desc inside the addressing part.
        - Changed the 'license' field in Build.PL from 'bsd' to 'mit'
        which is more accurate.

0.0402  Fri Apr 25 13:27:16 IDT 2008
        - Fixed a thinko with the wrong path to the DTD:
        "products-syndication.dtd" instead of "screenplay-xml.dtd".
        Possibly a copy-and-paste bug.

0.0401  Sat Jul 14 10:43:57 IDT 2007
        - Converted the "Screeplay" strings that were a leftover from
        the wrong module-starter invocation into "Screenplay".

0.04    Mon Jun 11 21:26:48 IDT 2007
        - Added the Quick-and-Dirty FromProto parser, which is slightly faster,
        than the Parse::RecDescent one and with much better diagnostics. 
        - More parsers can be added later.
        - Broke some compatibility - now require "use"-ing the parser class.
